--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         </table>
       </div>
       <br />
-      <b>Harshal Wakchaure</b>
+      <b>Akshaj Joshi</b>
     </center>
   </body>
 </html>
